2002-09-14  David Hampton  <hampton@employees.org>

	Refactor the startup to display the splash screen faster (bug #92192)

	* src/app-utils/kvp-option-registry.scm -- use slib
	* src/gnome/gnc-splash.c -- add a progress bar to the splash screen.
	  don't timeout the screen, require the app to shut it down.
	* src/gnome/gnc-splash.h -- export new splash API
	* src/gnome/gw-gnc-spec.scm -- wrap init-splash and update-splash
	* src/gnome/top-level.c -- refactor gui_init into splash_init and gui_init.
	  destroy the splash screen once the main window is up.
	* src/gnome/top-level.h -- export init_splash_screen function
	* src/scm/main.scm -- refactor startup into multiple stages to bring the
	  splash screen up sooner.  Update the splash screen during different
	  stages of the startup.

	Font Problems
	
	* src/gnome/top-level.c (gnc_gui_init): Exit gracefully if the
	register fonts can't be looaded.

	* src/gnome/window-main.[ch] (gnc_shutdown): Export this function.

	* src/register/register-gnome/gnucash-style.c
	(gnucash_style_set_register_font_name):
	(gnucash_style_set_register_hint_font_name): Complain to the user
	if a font can't be loaded.  Don't release any existing font until
	the new font has been successfully loaded.
	(gnucash_style_init): Indicate if all fonts were loaded.

2002-09-14  Derek Atkins  <derek@ihtfp.com>
	Add TaxTable entries to Vendor Invoices (Bills); make sure it does
	not bleed over into billback items.  Fixes RFE #91415

	* business-core/gncEntry.[ch] -- change the API to provide
	  separate storage for Price, Taxtable information, etc. for
	  Invoices and Bills, for chargeback features
	* business-core/file/gnc-entry-xml-v2.c -- change the XML to
	  clearly separate the "bill" and "invoice" data.
	* business-core/gw-business-core-spec.scm -- change scheme API
	  to match the new gncEntry API
	
	* business-core/gncInvoice.c -- use new gncEntry API.  If posting
	  a bill, set the invoice-price on each "billable" item.
